# simple-bank-api

./: .env  .env.default  .gitignore  Cargo.toml  Makefile  README.md  build.rs
.container/: docker-compose.yml  redis.conf
.container/cache/: dump.rdb
.container/data/: postmaster.opts
.container/data/base/1/: 1259  2619  2696  2840  2841
.container/data/base/16384/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13400  13401  13401_fsm  13401_vm  13405  13406  13406_fsm  13406_vm  13410  13411  13411_fsm  13411_vm  13415  174  175  2187  2228  2337  2579  2600  2600_fsm  2600_vm  2601  (+182 more)
.container/data/base/16389/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13400  13401  13401_fsm  13401_vm  13405  13406  13406_fsm  13406_vm  13410  13411  13411_fsm  13411_vm  13415  16390  16395  16396  174  175  2187  2228  2337  2579  2600  (+192 more)
.container/data/base/5/: 2619
.container/data/global/: 1260  1262  2671  2672  2676  pg_control
.container/data/pg_stat/: pgstat.stat
.container/scripts/: benchmark.sh  db-setup.sh  functions.sh  wrk_benchmark.sh
.github/workflows/: build.yml
.sqlx/: query-158e57e0cc46260f864924483e1e04c9fdae1264675487beacf6e9e8650a4f93.json  query-557dcb86510a15632b65ca87fc34dbf93735ed29af8be42397778dd5e197c5c4.json  query-a7da26ab1348cd70027e19dc9e49edc9a1d82133343b144a642d93029a0ae1d4.json  query-bc67e172f0e65b4495fd2f471458b142c90c7eede7bc9ab8ebb61c2290798727.json  query-f19e2e6316ad1ea0e09a8398c755048cfa0ed83746b8bdf3549fcd1fdc0d7489.json
api/: Cargo.toml
api/src/: http.rs  main.rs  routers.rs
api/src/api_doc/: mod.rs
api/src/http/: auth.rs  response.rs  validation.rs
api/src/middlewares/: auth.rs
api/src/routers/: accounts.rs  auth.rs  transactions.rs  users.rs
api/src/state/: application.rs
database/: Cargo.toml
database/src/: filters.rs  lib.rs  models.rs  repositories.rs  services.rs  structs.rs  traits.rs
database/src/filters/: account.rs  transaction.rs  user.rs
database/src/models/: account_dto.rs  transaction_dto.rs  user_dto.rs
database/src/repositories/: accounts.rs  transactions.rs  users.rs
database/src/services/: account.rs  transaction.rs  user.rs
database/src/structs/: encrypted_field.rs  range.rs
database/src/traits/: encryptable.rs  filterable.rs  persistable.rs  repository.rs
jobs/: Cargo.toml
migrations/: 20200101000000_create_common_functions.down.sql  20200101000000_create_common_functions.up.sql  20240915164834_create_users_table.up.sql  20240915164842_create_accounts_table.up.sql  20240915164851_create_transactions_table.down.sql  20240915164851_create_transactions_table.up.sql
