[workspace]
members = [
    "api",
    "database",
    "jobs",
]
resolver = "2"

[workspace.dependencies]
aes-gcm = { version = "0.10.3", features = ["std", "aes"] }
anyhow = "1.0.75"
argon2 = { version = "0.5.2", features = ["std"] }
async-trait = "0.1.71"
axum = { version = "0.7.5", features = ["macros", "multipart"] }
base64 = "0.22.1"
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = { version = "0.8.4", features = ["serde"] }
cipher = "0.4"
clap = { version = "4.4.11", features = ["derive"] }
csv = "1.3.0"
dotenv = "0.15.0"
futures = "0.3.30"
hmac = "0.12.1"
hyper = { version = "0.14.27", features = ["full"] }
indicatif = "0.17.7"
jwt = "0.16.0"
num_cpus = "1.16.0"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.107"
sha2 = "0.10.8"
sqlx = { version = "0.7.1", features = ["postgres", "bigdecimal", "macros", "runtime-tokio-rustls", "json", "chrono", "uuid", "migrate"] }
struct_iterable = "0.1.1"
thiserror = "1.0"
tokio = { version = "1.33.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace", "cors", "fs"] }
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono", "uuid", "preserve_order"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
uuid = { version = "1.5.0", features = ["v4", "v7", "serde"] }
validator = { version = "0.18", features = ["derive"] }

[profile.dev]
codegen-units = 1

[profile.dev.package."*"]
opt-level = "z"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
