[workspace]
members = [
    "api",
    "database",
    "jobs",
]
resolver = "2"

[workspace.dependencies]
aes-gcm = { version = "0.10.3", features = ["std", "aes"] }
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1.89"
axum = { version = "0.7.9", features = ["macros", "multipart"] }
base64 = "0.22"
bincode = "1.3.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
cipher = "0.4"
csv = "1.3.1"
dotenv = "0.15.0"
futures = "0.3"
hmac = "0.12"
hyper = { version = "1.7", features = ["full"] }
jwt = "0.16"
num_cpus = "1.17"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["postgres", "bigdecimal", "macros", "runtime-tokio-rustls", "json", "chrono", "uuid", "migrate"] }
struct_iterable = "0.1.1"
thiserror = "1.0"
tokio = { version = "1.47", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid", "preserve_order"] }
utoipa-rapidoc = { version = "5.0", features = ["axum"] }
utoipa-redoc = { version = "5.0", features = ["axum"] }
utoipa-swagger-ui = { version = "8.1", features = ["axum"] }
uuid = { version = "1.18", features = ["v4", "v7", "serde"] }
validator = { version = "0.18", features = ["derive"] }

[profile.dev]
codegen-units = 1

[profile.dev.package."*"]
opt-level = "z"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
