[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
hmac = { workspace = true }
jwt = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
struct_iterable = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
utoipa-rapidoc = { workspace = true }
utoipa-redoc = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dependencies.database]
path = "../database"
