[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aes-gcm = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
dotenv = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
