[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
aes-gcm = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cipher = { workspace = true }
dotenv = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
struct_iterable = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }
utoipa-rapidoc = { workspace = true }
utoipa-redoc = { workspace = true }
utoipa-swagger-ui = { workspace = true }
